Add authorisation and UI

--- a/views/pages/incidents.ejs
+++ b/views/pages/incidents.ejs
@@ -9,7 +9,7 @@
                     <li><%- incident.date %></li>
                     <li><%- incident.description %></li>
                     <li><%- incident.action %></li>
-                    <a href="/incidents/<%= incident.date %>">Show More</a>
+                    <a href="/incidents/show/<%= incident.date %>">Show More</a>
                 </ul>
             </div>
         <% }) %>
