--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,7 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TI App</title>
     <link href="/css/styles.css" rel="stylesheet"  type="text/css"/>
+    <link href="/css/home.css" rel="stylesheet"  type="text/css"/>
+    <link href="/css/tis.css" rel="stylesheet"  type="text/css"/>
+    
 </head>
 <body>
+<nav>
+    <ul>
+        <li class="nav-links">
+            <div >
+                <a href="/tis">Targeted Individuals List</a>
+            </div>
+        </li>        
+        <li class="nav-links">
+            <div >
+                <a href="/incidents">Incidents</a>
+            </div>
+        </li>
+        <li class="nav-links">
+            <div >
+                <a href="/tis/new">Add New TI</a>
+            </div>
+        </li>
+        <li class="nav-links">
+            <div >
+                <a href="/incidents/new">Add New Incident</a>
+            </div>
+        </li>
+        <li class="nav-links nav-right">
+            <div >
+                <a href="/users/new">Register User</a>
+            </div>
+        </li>
+        <li class="nav-links ">
+            <div >
+                <a href="/users/login">Login</a>
+            </div>
+        </li>
+        <li class="nav-links ">
+            <div >
+                <a href="/users/logout">Logout</a>
+            </div> 
+        </li>   
+    </ul>
+</nav>
     
 
