--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,31 +1,69 @@
-.tis-list{
-    display:flex;
-    color:blue;
-    width:60%;
-    margin:20px auto;
+html,body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    
 }
 
-h1{
-    color:purple;
-    width:30%;
-    margin:50px auto;
+
+ 
+
+
+
+.nav-links a{
+    color:yellow;
+    font-size:1rem;
+    text-decoration: none;
+    font-weight: bold;
 }
 
-.tis-entry {
-    border: solid 5px black;
+.nav-links a:hover{
+    color:aliceblue;
+}
+
+nav {
+
+    background-color: darkblue;     
+    padding: 1rem;
+    margin:0px 0px;
+    padding:10px 10px;
+    position:relative;
+    
+}
+
+nav ul {
+
+        list-style-type: none;
+    
+        padding: 0;
+    
+        margin: 0;
+    
+        display: flex;
+    
+        justify-content: space-between;
+        align-items: center;
+    
+    }
+
+
+.nav-links{
+    /* border:solid 2 px black; */
     margin:10px 10px;
     padding:10px 10px;
     border-radius: 20px;
-}
-
-.links{
-    border:solid 2 px black;
-    margin:10px 10px;
-    padding:10px 10px;
-    border-radius: 20px;
-    width:100px;
-    height:40px;
+    /* width:20%; */
+    /* height:50%; */
     text-align: center;
-    color:blue;
-    background-color: aquamarine;
+    
+    font-size: 1.0rem;
+    font-weight: 300;
+    /* background-color: yellow;  */
+} 
+
+.nav-right{
+    margin-left:auto;
 }
+
+
+
