--- a/views/pages/tishow.ejs
+++ b/views/pages/tishow.ejs
@@ -1,16 +1,15 @@
 <%- include("../partials/head.ejs") -%>
-<h1>
+<h1 class="ti-item-title">
     <%- ti.name %>
 </h1>
-<div>
-        <div class="tis-entry">
-            <ul>
-                <li><%- ti.name %></li>
-                <li><%- ti.country %></li>
-                <li><%- ti.city %></li>
-                <li><%- ti.gender %></li>
-                <li><%- ti.symptoms %></li>
-                <li><%- ti.activism %></li>
+<div class="=ti-item">
+            <ul class="ti-item-container">
+                <li style="font-weight:bold;font-size: 4rem;"><span>NAME : </span><%- ti.name %></li>
+                <li style="color:purple"><span>COUNTRY : </span><%- ti.country %></li>
+                <li style="color:purple"><span>CITY : </span><%- ti.city %></li>
+                <li style="color:purple"><span>GENDER : </span><%- ti.gender %></li>
+                <li style="color:orangered"><span>SYMPTOMS : </span><%- ti.symptoms %></li>
+                <li style="color:orangered"><span>ACTIVISM : </span><%- ti.activism %></li>
 
                 <form action="/tis/edit/<%= ti.name %>" method="get">
                     <button type="submit">Edit</button>
@@ -19,6 +18,5 @@
                     <button type="submit">Delete</button>
                 </form> 
             </ul>
-        </div>
 </div>
 <%- include('../partials/foot') %>
