--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TI App</title>
     <link href="/css/styles.css" rel="stylesheet"  type="text/css"/>
-    <link href="/css/home.css" rel="stylesheet"  type="text/css"/>
-    <link href="/css/tis.css" rel="stylesheet"  type="text/css"/>
-    
+    <!-- <link href="/css/home.css" rel="stylesheet"  type="text/css"/> -->
+    <!-- <link href="/css/tis.css" rel="stylesheet"  type="text/css"/> -->
+     <% if (typeof styles !== 'undefined') { %>
+        <% for (let style of styles) {%>
+            <link href="<%= style %>" rel="stylesheet"  type="text/css"/>
+        <% } %> 
+    <% } %>   
 </head>
 <body>
 <nav>
