--- a/views/pages/tishow.ejs
+++ b/views/pages/tishow.ejs
@@ -2,7 +2,7 @@
 <h1 class="ti-item-title">
     <%- ti.name %>
 </h1>
-<div class="=ti-item-container">
+<div class="ti-item-container">
             <ul class="ti-item">
                 <li style="font-weight:bold;font-size: 4rem;"><span>NAME : </span><%- ti.name %></li>
                 <li style="color:purple; margin-top:10px;"><span>COUNTRY : </span><%- ti.country %></li>
