--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,7 +1,7 @@
 .home {
     color:purple;
-    width:70%;
-    height:90%;
+    width:100%;
+    height:100%;
     margin:auto auto;
     text-align: center;
     display:flex;
@@ -15,17 +15,25 @@
     position:absolute;
     opacity:0.4;
     width:100%;
-    height:auto;
-    top:0;
-    left:0;
+    height:100vh;
+    
     z-index: -1;
 }
 
 .home-text{
-    position:relative;
+    text-align: center;
+    margin:auto auto;
 }
 
 .home h3{
     color: orangered
 
 }
+
+@media only screen and (max-width: 768px) {
+
+    .home{
+        font-size: 2rem;
+}   
+}
+
