--- a/public/css/incident.css
+++ b/public/css/incident.css
@@ -4,12 +4,9 @@
 
 .incident-container{
     width:60%;
-    margin:0;
-    position:absolute;
-    top:50%;
-    left:50%;
-    /* transform:translateX(-50%); */
-    transform:translateY(-40%) translateX(-50%);
+    margin:20px auto;
+    height:auto;
+   
     border: solid 5px black;
     padding:20px 20px;
     border-radius: 20px;
