--- a/public/css/tiedit.css
+++ b/public/css/tiedit.css
@@ -1,7 +1,7 @@
 .body{
     height:100vh;
 }
-
+/* 
 .ti-edit-form-container{
     width:60%;
     margin:0;
@@ -9,18 +9,16 @@
     top:50%;
     left:50%;
     /* transform:translateX(-50%); */
-    transform:translateY(-50%) translateX(-50%);
+    /* transform:translateY(-50%) translateX(-50%); */
 
-
-}
 
 .ti-edit-form{
     border: solid 5px black;
-    margin:30px 30px;
+    margin:20px auto;
     padding:20px 20px;
     border-radius: 20px;
-    width:auto;
-    height:90%; 
+    width:60%;
+    height:auto; 
     font-size:3rem;
     color:darkblue;
     text-align:left;
@@ -51,3 +49,11 @@
     color:aliceblue;
 }
 
+@media only screen and (max-width: 600px) {
+.ti-edit-input, .it-edit-btn{
+    font-size:1rem;
+}
+
+
+
+}
